--- a/quiz.html
+++ b/quiz.html
@@ -54,12 +54,12 @@
                 <br>
                 <input type="radio" name="skin3" value="feel552">Dry or very dry
                 <br>
-                <input type="radio" name="skin3" value="feel553">Oily on the forehead and nose
+                <input type="radio" name="skin3" value="feel553">Oily on the  <span>forehead and nose</span>
                 <br>
                 <input type="radio" name="skin3" value="feel554">Oily all over
             </p>
             <br>
-            <p>5. <b>How often do you feel tightness around the eyes and the mouth area?</b>
+            <p>5. <b>How often do you <span>feel tightness around the eyes and the mouth area?</span> </b>
                 <br>
                 <input type="radio" name="skin4" value="tight441">very often
                 <br>
