--- a/quiz.html
+++ b/quiz.html
@@ -133,14 +133,14 @@
                 let skinType;
 
                 if (
-                    answers.skin === 'texture883'|| answers.skin === 'texture881'&&
-                    answers.skin1 === 'pores771'|| answers.skin1 === 'pores772'&&
-                    answers.skin2 === 'skin663' || answers.skin1 === 'skin664' &&
+                    answers.skin === 'texture883'|| answers.skin === 'texture884'&&
+                    answers.skin1 === 'pores771'&&
+                    answers.skin2 === 'skin663' || answers.skin2 === 'skin664' &&
                     answers.skin3 === 'feel553' &&
                     answers.skin4 === 'tight443' &&
-                    answers.skin5 === 'pimples333' &&
-                    answers.skin6 === 'skin224' &&
-                    answers.skin7 === 'skin113'
+                    answers.skin5 === 'pimples333' || answers.skin5==='pimples334' &&
+                    answers.skin6 === 'skin224'|| answers.skin6 ==='skin221' &&
+                    answers.skin7 === 'skin113' || answers.skin7==='skin114'
                 ) {
                     skinType = 'Combination Skin';
                 } else if (
