--- a/quiz.html
+++ b/quiz.html
@@ -159,8 +159,8 @@
                     answers.skin1 === 'pores773' &&
                     answers.skin2 === 'skin664' &&
                     answers.skin3 === 'feel554' &&
-                    answers.skin4 === 'tight443' &&
-                    answers.skin5 === 'pimples333' &&
+                    (answers.skin4 === 'tight443' || answers.skin4 === 'tight444') &&
+                    (answers.skin5 === 'pimples333' || answers.skin5 === 'pimples334') &&
                     answers.skin6 === 'skin224' &&
                     (answers.skin7 === 'skin113' || answers.skin7 === 'skin114')
                 ) {
